--- a/inventory/devices/static/devices/css/device_detail.css
+++ b/inventory/devices/static/devices/css/device_detail.css
@@ -1,3 +1,7 @@
+.inventory-innernav{
+    padding-top: 70px !important;
+}
+
 .inventory-innernav a{
     font-size: 18px;
 }
@@ -32,11 +36,6 @@
     margin-right: 1rem;
 }*/
 
-.inventory-inner-top{
-    top: 56px;
-    z-index: 2000;
-}
-
 .inventory-innernav.inventory-innernav-toggled .inventory-innernav-arrow {
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
@@ -62,12 +61,12 @@
     -webkit-transition: -webkit-transform 550ms ease;
 }
 
-  .half-circle {
+.half-circle {
     /*clip-path: circle(50px at 60px);*/
     z-index:99999;
     clip-path: polygon(45% 0, 100% 0, 100% 100%, 45% 100%, 15% 50%);
-
     border-top-right-radius: 110px;
     border-bottom-right-radius: 110px;
     border-left: 0px;
 }
+
